# kernel-filter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/image/: Image.hpp
include/process/: Kernel.hpp  Naive.hpp  Parallel.hpp  Process.hpp
kernels/: box.k
src/image/: Image.cpp
src/process/: Kernel.cpp
